--- a/src/content/events/scaling-interoperability-testing-with-onelab.mdx
+++ b/src/content/events/scaling-interoperability-testing-with-onelab.mdx
@@ -10,12 +10,15 @@ event_start: 2025-04-07 16:00:00 +00:00
 event_end: 2025-04-07 17:00:00 +00:00
 image: linaro-website/images/events/Webinar-Banner_1_gvut0m.png
 type: webinar
+webinarContactButton:
+  button_text: View Recording
+  form_id: "9"
+  modal_id: webinarContactForm
+  description: Request Recording
+  formName: webinar_contact
 button:
-  text: Register Now
-  url: https://www.eventbrite.co.uk/e/scaling-interoperability-testing-with-onelab-tickets-1273925117319?aff=oddtdtcreator
-footerButton:
-  text: Register Here
-  url: https://www.eventbrite.co.uk/e/scaling-interoperability-testing-with-onelab-tickets-1273925117319?aff=oddtdtcreator
+  text: View Recording
+  url: /events/scaling-interoperability-testing-with-onelab?webinar_form_modal
 ---
 
 📆 Date: April 7th 2025
@@ -23,15 +26,6 @@ footerButton:
 🕒 Time: 4:00pm GMT (16.00 UTC)
 
 🌐 Online Event: Join from anywhere
-
-<div className="flex justify-center items-center">
-  <a
-    href="https://www.eventbrite.co.uk/e/scaling-interoperability-testing-with-onelab-tickets-1273925117319?aff=oddtdtcreator"
-    className="inline-block"
-  >
-    <button className="linaro-gradient-button mx-auto">Register Here</button>
-  </a>
-</div>
 
 Ensuring interoperability in the embedded ecosystem is a complex challenge. With a wide range of possible OS choices—including SoC vendor OSes, ODM-specific builds, OEM enterprise OSes, and third-party distributions—embedded devices must be continuously tested for compatibility across multiple environments.
 
