--- a/src/content/events/long-term-support-lts-for-the-linux-kernel-what-s-changing-now.mdx
+++ b/src/content/events/long-term-support-lts-for-the-linux-kernel-what-s-changing-now.mdx
@@ -8,7 +8,7 @@ description: >+
 date_published: 2024-02-27 11:50:03 +00:00
 event_start: 2024-04-03 05:30:00 +01:00
 event_end: 2024-04-03 04:30:03 +01:00
-image: linaro-website/images/events/lts-webinar
+image: linaro-website/images/events/Webinar-Banner_1_gvut0m.png
 type: webinar
 location: Virtual
 button:
