--- a/src/content/events/need-your-device-s-use-of-open-source-software-to-be-more-production-ready-linaro-can-lend-a-hand.mdx
+++ b/src/content/events/need-your-device-s-use-of-open-source-software-to-be-more-production-ready-linaro-can-lend-a-hand.mdx
@@ -5,7 +5,7 @@ description: "Speaker: Davide Ricci Director Developer Services"
 date_published: 2023-11-03 10:32:14 +00:00
 event_start: 2023-12-12 12:32:14 +00:00
 event_end: 2023-12-12 05:32:14 +00:00
-image: linaro-website/images/events/ds-webinar-banner-for-event-page
+image: linaro-website/images/events/Webinar-Banner_1_gvut0m.png
 type: webinar
 location: Virtual
 button:
