--- a/src/content/blogs/boosting-the-next-wave-of-arm-innovation.mdx
+++ b/src/content/blogs/boosting-the-next-wave-of-arm-innovation.mdx
@@ -21,11 +21,11 @@ To attend the event, make sure to [register here](https://www.linaro.org/connect
 
 For those of you who are new to Linaro, Linaro Connect is our yearly conference where we discuss all things related to Arm-based technology.
 
-This is where software developers, hardware engineers and business development managers all come together to share information, network, code and make decisions which influences technology of the future. Regardless of whether you are a software developer or a business decision maker - if you care about Arm technology this is the place to be.
+This is where software developers, hardware engineers and business development managers all come together to share information, network, code and make decisions which influence the technology of the future. Regardless of whether you are a software developer or a business decision maker - if you care about Arm technology this is the place to be.
 
 # Visionary keynotes from Arm, Microsoft, Qualcomm and more
 
-The theme for Linaro Connect Lisbon 2025 is “Boosting the Next Wave of Arm Innovation”. In Linaro’s opening keynote, Linaro CTO Grant Likely will talk about which technologies Linaro is focusing on to do just that, highlighting use cases where we are tackling industry challenges through open source collaboration and standardisation. Following on from the Linaro keynote there will be two keynotes from Arm focusing on IoT and data centre, Microsoft on Windows on Arm and Linux Foundation on Safety Certification.
+The theme for Linaro Connect Lisbon 2025 is “Boosting the Next Wave of Arm Innovation”. In Linaro’s opening keynote, Linaro CTO Grant Likely will talk about which technologies Linaro is focusing on to do just that, highlighting use cases where we are tackling industry challenges through open source collaboration and standardisation. Following on from the Linaro keynote there will be two keynotes from Arm focusing on IoT and data centre, one from Microsoft on Windows on Arm and one keynote from Linux Foundation on Safety Certification.
 
 On Thursday we will have keynotes from Qualcomm, the openEuler project, FIDO Alliance and ADLINK covering topics such as Edge AI, Deepseek, FIDO onboarding and ONELab and Arm SystemReady. On the final day of Linaro Connect, we have keynotes covering the Cyber Resilience Act and its impact on embedded development, Confidential Computing and the opportunities it presents and the energy transition in Portugal.
 
@@ -78,7 +78,7 @@ Thursday 15 May, 16.30-17.10
 
 Thursday 15 May, 10.30-11.10, Keynote Room
 
-In this panel discussion, we will bring together some of our keynote speakers to discuss the challenges of navigating cybersecurity regulations, supply chains and confidential computing technologies. Expect insights from Kate Stewart (Linux Foundation), Mike Bursell (Confidential Computing Consortium, Richard Kerslake (FIDO Alliance) and Marta Rybczynska (Ygreky).
+In this panel discussion, we will bring together some of our keynote speakers to discuss the challenges of navigating cybersecurity regulations, supply chains and confidential computing technologies. Expect insights from Kate Stewart (Linux Foundation), Mike Bursell (Confidential Computing Consortium), Richard Kerslake (FIDO Alliance) and Marta Rybczynska (Ygreky).
 
 ## Arm Confidential Compute Architecture open-source enablement update
 
