--- a/src/content/blogs/adding-support-for-mte-debugging-to-qemu.mdx
+++ b/src/content/blogs/adding-support-for-mte-debugging-to-qemu.mdx
@@ -31,7 +31,7 @@ GDB supports debugging MTE on Linux as a native target since release 13.
 
 The MTE support in GDB 13 introduces a new command, memory-tag, and additional subcommands to allow the users to inspect and set the tags, and the ability to detect when a segfault happens due to a tag mismatch, displaying a nice info message with the value of the tags that caused the segfault. The support also allows the user to inspect Linux core files generated due to MTE exceptions.
 
-This support, however, is only for Linux native targets and relies on reading a Linux-specific file, /proc/<PID>/smaps, to discover which memory regions are tagged or not. If GDB server is being used to debug a process, and so GDB connected to the server via 'target remote `<HOST:PORT>`' command, GDB reads the smaps contents via a vFile:open/pread [GDB operations](https://sourceware.org/gdb/current/onlinedocs/gdb.html/Host-I_002fO-Packets.html), or, if it's a "direct" debug (executable passed to gdb), GDB opens and reads the smaps file directly.
+This support, however, is only for Linux native targets and relies on reading a Linux-specific file, `/proc/<PID>/smaps`, to discover which memory regions are tagged or not. If GDB server is being used to debug a process, and so GDB connected to the server via 'target remote `<HOST:PORT>`' command, GDB reads the smaps contents via a vFile:open/pread [GDB operations](https://sourceware.org/gdb/current/onlinedocs/gdb.html/Host-I_002fO-Packets.html), or, if it's a "direct" debug (executable passed to gdb), GDB opens and reads the smaps file directly.
 
 On QEMU, for Linux native targets, it would be a matter of emulating the smaps file with the proper MTE flags to satisfy the GDB inquires on tagged memory regions and make QEMU gdbstub work with the mechanism introduced in GDB 13 for checking if a memory region is tagged. The [maybe_do_fake_open](https://gitlab.com/qemu-project/qemu/-/blob/master/linux-user/syscall.c#L8403) function in linux-user/syscall.c, in QEMU's source, takes care of creating a fake view of smaps file for Linux user mode. But that would not work for QEMU system mode, since smaps is an OS-related concept.
 
