--- a/src/content/blogs/adding-support-for-mte-debugging-to-qemu.mdx
+++ b/src/content/blogs/adding-support-for-mte-debugging-to-qemu.mdx
@@ -6,7 +6,7 @@ date: 2025-04-24T11:00:00.000Z
 image: linaro-website/images/blog/Virtualization_image_x3vb2d.png
 tags:
   - qemu
-  - debugging
+  - virtualization
 author: gustavo-romero
 related: []
 ---
