--- a/src/content/blogs/linaro-connect-2025-demo-friday.mdx
+++ b/src/content/blogs/linaro-connect-2025-demo-friday.mdx
@@ -68,7 +68,7 @@ Linaro has long played a pivotal role in testing, having created LAVA - the wide
 
 # Toolchain demo on using LLMs in regression hunting
 
-In this demo, Linaro will show how to use LLMs to find regressions in post-commit CI and avoid bisecting. For the purpose of this demonstration, we will use Claude Sonnet 3.5 and the LLVM buildbots.
+In this demo, Linaro will show how to use LLMs to find regressions in post-commit CI and avoid bisecting. For the purpose of this demonstration, the Claude Sonnet 3.5 and the LLVM buildbots will be used.
 
 # Community Initiatives
 
@@ -81,3 +81,5 @@ In this demo, Linaro will show how to use LLMs to find regressions in post-commi
 # How to see the demos
 
 If you are attending Linaro Connect, we look forward to welcoming you to Demo Friday which will take place on (you guessed it) Friday 16 May, 1-3pm. For those unable to join live, we will record several of the demos and share online following the event so keep your eyes peeled for social media posts announcing these videos!
+
+If you’d simply like to learn more about Linaro Connect, feel free to contact us on [events@linaro.org](mailto:events@linaro.org) or check out the [Linaro Connect webpage](https://www.linaro.org/connect/) for more information.
