--- a/src/content/news/linaro-connect-2025-celebrating-16-years-of-arm-innovation-and-charting-the-future.mdx
+++ b/src/content/news/linaro-connect-2025-celebrating-16-years-of-arm-innovation-and-charting-the-future.mdx
@@ -6,8 +6,9 @@ description: >
 date: 2025-05-15 09:00:00 +00:00
 image: linaro-website/images/news/6b02ab97-9974-47ef-9009-269039ea4453_gkzqgw.jpg
 tags:
-  - Arm
+  - arm
   - open-source
+  - linaro-connect
 author: linaro
 related: []
 ---
