--- a/src/content/news/linaro-connect-2025-celebrating-16-years-of-arm-innovation-and-charting-the-future.mdx
+++ b/src/content/news/linaro-connect-2025-celebrating-16-years-of-arm-innovation-and-charting-the-future.mdx
@@ -13,7 +13,7 @@ author: linaro
 related: []
 ---
 
-Lisbon, Portugal – [May 15th, 2025] – At Linaro Connect 2025, Linaro CTO Grant Likely delivered a compelling keynote reflecting on the transformative journey of the Arm ecosystem over the past 16 years. He highlighted the evolution from a fragmented landscape requiring extensive engineering efforts to a unified, mature architecture now leading across mobile, desktop, cloud, edge, and automotive sectors. ￼
+_Lisbon, Portugal – May 15th, 2025_ – At Linaro Connect 2025, Linaro CTO Grant Likely delivered a compelling keynote reflecting on the transformative journey of the Arm ecosystem over the past 16 years. He highlighted the evolution from a fragmented landscape requiring extensive engineering efforts to a unified, mature architecture now leading across mobile, desktop, cloud, edge, and automotive sectors. ￼
 
 “When Linaro started, the Arm ecosystem needed significant work across the stack—from toolchains and kernels to libraries and applications,” said Likely. “Today, Arm stands as the primary architecture across diverse computing domains, a testament to the collaborative efforts of our community.”
 
