--- a/src/content/news/linaro-connect-2025-celebrating-16-years-of-arm-innovation-and-charting-the-future.mdx
+++ b/src/content/news/linaro-connect-2025-celebrating-16-years-of-arm-innovation-and-charting-the-future.mdx
@@ -39,7 +39,9 @@ The keynote also addressed upcoming challenges and areas of focus for Linaro:
 
     - System Complexity Management: Developing solutions for communication between heterogeneous processors, exemplified by the VirtIO message specification’s adoption in automotive and mobile sectors.
 
-Linaro Connect 2025 continues through May 16, featuring keynotes from industry leaders, technical sessions, and demonstrations. For more information, visit https://www.linaro.org/connect/schedule
+Linaro Connect 2025 continues through May 16, featuring keynotes from industry leaders, technical sessions, and demonstrations. Linaro Connect 2026 will take place at the Melia Avenida America hotel in Madrid, Spain - April 29th - May 1st. 
+
+For more information, visit https://www.linaro.org/connect/schedule
 
 **About Linaro**
 
