--- a/src/content/events/inside-linux-on-snapdragon.mdx
+++ b/src/content/events/inside-linux-on-snapdragon.mdx
@@ -15,9 +15,9 @@ button:
   url: https://www.eventbrite.co.uk/e/inside-linux-on-snapdragon-how-to-reach-production-grade-with-cra-tickets-1329066526759?aff=oddtdtcreator
 ---
 
-📆 Date: May 29th 2025
+📆 Date: July 2025 (Date TBC)
 
-🕒 Time: 4:30pm GMT (16.30 UTC)
+🕒 Time: 4:30pm GMT
 
 🌐 Online Event: Join from anywhere
 
