add coming soon

--- a/src/content/events/inside-linux-on-snapdragon.mdx
+++ b/src/content/events/inside-linux-on-snapdragon.mdx
@@ -6,7 +6,7 @@ description: >+
 location: |
   Virtual
 date_published: 2025-04-17 12:00:00 +00:00
-event_start:
+event_start: Coming Soon
 event_end:
 image: linaro-website/images/events/Webinar-Banner_1_gvut0m.png
 type: webinar
